syntax = "proto3";

service UserService{
  rpc CheckLogin(CheckLoginRequest) returns (CheckLoginResponse);

  rpc InitAdmin(InitAdminRequest) returns (InitAdminResponse);
}

message CheckLoginRequest{
  string username = 1;
  string password = 2;
}

message CheckLoginResponse{
  int32 code = 1;
  optional int64 userId = 2;
}

message InitAdminRequest{
  string password = 1;
}

message InitAdminResponse{
  int32 code = 1;
  string message = 2;
}
